# CMP-GBACheatConverter

./: .gitignore  CMakeLists.txt  GBA_Cheat_Device_Code_Type_Reference_v2.00.docx  GBA_Cheat_Device_Code_Type_Reference_v2.01.docx  NOTICE.md  README.md  build-windows-x64.cmd  build-windows-x64.ps1
docs/: CLI_Command_Reference.md  cmp-format.md  compatibility-matrix.md  device-rom-code-type-audit.md  device-rom-fingerprints.md  ezflash-enhanced-e7.md  ezflash-enhanced-v3.md  save-output-formats.md  xploder-analysis.md
examples/: Convert-CHT-to-CLT.bat  armax_block_if_else_encrypted.txt  armax_block_if_else_raw.txt  armax_block_no_else_to_ez.txt  armax_button_encrypted.txt  armax_button_raw.txt  armax_decrypted_actual.txt  armax_decrypted_expected.txt  armax_dynamic_deadface_encrypted.txt  armax_dynamic_deadface_raw.txt  armax_encrypted.txt  armax_mirrored_ewram_encrypted.txt  armax_mirrored_ewram_to_ez.cht  armax_patch_slowdown_raw.txt  armax_pointer_encrypted.txt  armax_pointer_raw.txt  armax_pointer_to_fcd_inline.txt  auto_detect_armax_encrypted.txt  auto_detect_armax_expected.txt  auto_detect_armax_status.txt  cmp-grouped-codebreaker.cmp  cmp-nested-groups.cmp  cmp-relaxed-groups-credits-expected.cht  cmp-relaxed-groups-credits-input.txt  codebreaker_raw.txt  expected_codebreaker_to_gameshark.txt  expected_ez_output.txt  expected_gameshark_to_codebreaker.txt  expected_gameshark_to_ez.txt  ezflash_enhanced_e7_compound_if.cht  ezflash_enhanced_e7_masked_button.cht  ezflash_enhanced_e7_multiline.cht  ezflash_enhanced_e7_revision6.cht  ezflash_fix8_compound_if.cht  ezflash_fix8_multiline.cht  ezflash_input_test.cht  ezflash_mode_test.txt  ezflash_original_expected.txt  ezflash_original_to_e7_expected.cht  ezflash_original_to_e7_input.cht  (+54 more)
resources/: app.manifest.in  app.rc.in
src/cli/: cli_app.cpp  cli_app.hpp  cli_arguments.cpp  cli_conversion.cpp  cli_crypto.cpp  cli_internal.hpp  cli_io.cpp  main.cpp
src/core/: cmp.hpp  cmp_input.cpp  cmp_output.cpp  detect.cpp  detect.hpp  detect_armax.cpp  detect_common.cpp  detect_crypto.cpp  detect_format.cpp  detect_gameshark.cpp  detect_internal.hpp  gba_memory.hpp  inline_notes.cpp  inline_notes.hpp  inline_notes_internal.hpp  inline_notes_parse.cpp  inline_notes_render.cpp  text.cpp  text.hpp  text_code_rows.cpp  text_gamehacking.cpp  text_headers.cpp  text_hex.cpp  text_lines.cpp  types.hpp  version.hpp.in
src/crypto/: tea.cpp  tea.hpp
src/export/: output_armax_dsc.cpp  output_common.cpp  output_mister.cpp  output_modes.cpp  output_modes.hpp  output_modes_internal.hpp  output_text.cpp  output_vba_clt.cpp  zip_store.cpp
src/formats/: armax.cpp  armax.hpp  armax_common.cpp  armax_encode.cpp  armax_encode_common.cpp  armax_encode_conditions.cpp  armax_encode_document.cpp  armax_encode_internal.hpp  armax_encode_operations.cpp  armax_internal.hpp  armax_parse.cpp  armax_transform.cpp  codebreaker.cpp  codebreaker.hpp  codebreaker_cipher.cpp  codebreaker_decode.cpp  codebreaker_encode.cpp  codebreaker_encode_common.cpp  codebreaker_encode_conditions.cpp  codebreaker_encode_document.cpp  codebreaker_encode_internal.hpp  codebreaker_encode_operations.cpp  codebreaker_internal.hpp  codebreaker_parse.cpp  codebreaker_raw.cpp  codebreaker_seed.cpp  ezflash.cpp  ezflash.hpp  ezflash_enhanced_emit.cpp  ezflash_enhanced_plan.cpp  ezflash_groups.cpp  ezflash_internal.hpp  ezflash_optimize.cpp  ezflash_parse.cpp  ezflash_parse_conditions.cpp  ezflash_parse_document.cpp  ezflash_parse_internal.hpp  ezflash_parse_runs.cpp  ezflash_parse_runtime.cpp  ezflash_tokens.cpp  (+19 more)
src/gui/: gui_commands.cpp  gui_controls.cpp  gui_conversion.cpp  gui_files.cpp  gui_formats.cpp  gui_layout.cpp  gui_settings.cpp  gui_state.cpp  gui_state.hpp  gui_text.cpp  main_win.cpp
src/import/: native_input.cpp  native_input.hpp  native_input_binary.cpp  native_input_common.cpp  native_input_internal.hpp  native_input_libretro.cpp  native_input_mednafen.cpp  native_input_mgba.cpp  native_input_mister.cpp  native_input_myboy.cpp  native_input_text.cpp
tests/: test_armax.cpp  test_cases.hpp  test_cli.cpp  test_cmp.cpp  test_codebreaker.cpp  test_core.cpp  test_detection.cpp  test_ezflash_enhanced.cpp  test_ezflash_fix8.cpp  test_ezflash_grouped.cpp  test_ezflash_original.cpp  test_gameshark.cpp  test_integration.cpp  test_main.cpp  test_mednafen.cpp  test_mgba.cpp  test_mister.cpp  test_native_inputs.cpp  test_native_outputs.cpp  test_retroarch.cpp  test_support.cpp  test_support.hpp  test_text_cleanup.cpp  test_vba_clt.cpp  test_xploder.cpp
